# flutter_7zip

./: .gitmodules  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml  test.7z
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_7zip_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_7zip.podspec
ios/Classes/: flutter_7zip.c  flutter_7zip.cpp
lib/: flutter_7zip.dart
lib/src/: flutter_7zip_bindings_generated.dart
linux/: CMakeLists.txt
macos/: flutter_7zip.podspec
macos/Classes/: flutter_7zip.cpp
src/: CMakeLists.txt  flutter_7zip.cpp  flutter_7zip.h
windows/: CMakeLists.txt
